# audiobookshelf-sync

./: .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml
audiobookshelf_sync/: __main__.py  api.py  config.py  download.py  queue.py  tui.py
tests/: test_api.py  test_cli.py  test_configure.py  test_download.py  test_queue.py  test_tui.py
